update: fix scrollbar bug

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 html {
     background: #1B1B1F;
     padding: 50px;
+    margin: 0;
+    overflow: hidden;
 }
 
 .title {
